data/derived/comb/progs/unify/prog0646.ml.out
Characters 134-179:
  List.append (List.append ((clone 0 (-diff)), len1), len2);;
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
